# Yggdrasil

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  tailwind.config.js
engine/: Cargo.toml
engine/src/: error.rs  lib.rs  util.rs
engine/src/rules/: branch.rs
engine/src/syntax/: validate.rs
grammar/: Cargo.toml  build.rs
grammar/src/: error.rs  expr.rs  lib.rs  parser.rs
grammar/src/expr/: constantexpr.rs  literal.rs  variable.rs
grammar/tests/: test.rs
src/: app.rs  lib.rs  main.rs
src/app/: components.rs
src/app/components/: editor.rs  header.rs
src/app/components/editor/: branch.rs  statement.rs  status.rs  toolbar.rs
src/app/pages/: editor.rs
src/app/util/: hotkeys.rs  mod.rs  uid.rs
