[package]
name = "yggdrasil-grammar"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# rust-sitter-tool.workspace = true

[dependencies]
# rust-sitter.workspace = true
chumsky = { workspace = true, features = ["regex", "unstable"] }
nanoid.workspace = true
strum = { workspace = true, optional = true, features = ["derive"] }

[features]
discriminants = ["dep:strum"]
